# prime-sieve-wasm

./: Cargo.toml  README.md  deno-runner.ts  index.html  index.js  sieve-worker-plain.js  sieve-worker.js
src/: lib.rs  main.rs
