[package]
name = "prime-sieve-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="prime_sieve_lib"
crate-type = ["cdylib", "lib"]

[[bin]]
name="prime_sieve"
path="src/main.rs"

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.84"
